--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-Flask==3.0.0
+blinker==1.8.2
+click==8.1.7
+dnspython==2.6.1
+flask==2.3.3
+Flask-Login==0.6.3
 Flask-PyMongo==2.3.0
-Pillow==10.1.0
-python-dotenv==1.0.0
-requests==2.31.0
+Flask-WTF==1.1.1
 gunicorn==21.2.0
-Werkzeug==3.0.1
+importlib-metadata==8.5.0
+itsdangerous==2.2.0
+jinja2==3.1.4
+MarkupSafe==2.1.5
+packaging==24.2
 piexif==1.1.3
+Pillow==10.1.0
+pymongo==4.10.1
+python-dotenv==1.0.0
+werkzeug==3.0.6
+WTForms==3.0.1
+zipp==3.20.2
